--- a/self_discipline_app/requirements.txt
+++ b/self_discipline_app/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.12.0
-streamlit-calendar==0.0.1
-pandas==1.3.4
-matplotlib==3.4.3
+streamlit
+streamlit-extras
+streamlit-calendar
+pandas
+matplotlib
