--- a/self_discipline_app/requirements.txt
+++ b/self_discipline_app/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.12.0
-streamlit-extras==0.1.0
-streamlit-calendar==0.0.1
-pandas==1.3.4
-matplotlib==3.4.3
+streamlit==1.38.0
+streamlit-extras==0.4.7
+streamlit-calendar
+pandas
+matplotlib
